--- a/src/ONIModLauncher/ONIModLauncher.csproj
+++ b/src/ONIModLauncher/ONIModLauncher.csproj
@@ -11,10 +11,13 @@
     <Description>A mod manager and launcher for Oxygen Not Included.</Description>
     <PackageProjectUrl>https://github.com/romen-h/ONI-ModLauncher</PackageProjectUrl>
     <RepositoryUrl>https://github.com/romen-h/ONI-ModLauncher</RepositoryUrl>
-    <Version>0.4.0</Version>
+    <Version>0.4.1</Version>
     <ProduceReferenceAssembly>false</ProduceReferenceAssembly>
     <StartupObject>ONIModLauncher.App</StartupObject>
     <RootNamespace>ONIModLauncher</RootNamespace>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>romenh.snk</AssemblyOriginatorKeyFile>
+    <DelaySign>false</DelaySign>
   </PropertyGroup>
 
   <ItemGroup>
