--- a/src/ONIModLauncher/ONIModLauncher.csproj
+++ b/src/ONIModLauncher/ONIModLauncher.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net5.0-windows</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
     <UseWindowsForms>true</UseWindowsForms>
     <Authors>RomenH</Authors>
@@ -11,7 +11,8 @@
     <Description>A mod manager and launcher for Oxygen Not Included.</Description>
     <PackageProjectUrl>https://github.com/romen-h/ONI-ModLauncher</PackageProjectUrl>
     <RepositoryUrl>https://github.com/romen-h/ONI-ModLauncher</RepositoryUrl>
-    <Version>0.5.0</Version>
+    <Version>0.6.0</Version>
+    <VersionSuffix>alpha</VersionSuffix>
     <ProduceReferenceAssembly>false</ProduceReferenceAssembly>
     <StartupObject>ONIModLauncher.App</StartupObject>
     <RootNamespace>ONIModLauncher</RootNamespace>
@@ -22,17 +23,23 @@
 
   <ItemGroup>
     <None Remove="Assets\dlc1.jpg" />
+    <None Remove="Assets\dlc2.jpg" />
     <None Remove="Assets\dragger.png" />
     <None Remove="Assets\DroidSans.ttf" />
+    <None Remove="Assets\github-mark-white.png" />
     <None Remove="Assets\GRAYSTROKE REGULAR.otf" />
     <None Remove="Assets\vanilla.jpg" />
     <None Remove="Assets\workshop_banner.png" />
+    <None Remove="Assets\workshop_icon.png" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="gong-wpf-dragdrop" Version="2.4.1" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="YamlDotNet" Version="11.2.1" />
+    <PackageReference Include="Gameloop.Vdf" Version="0.6.2" />
+    <PackageReference Include="Gameloop.Vdf.JsonConverter" Version="0.2.1" />
+    <PackageReference Include="gong-wpf-dragdrop" Version="3.2.1" />
+    <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.2365.46" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="YamlDotNet" Version="15.1.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -41,27 +48,15 @@
 
   <ItemGroup>
     <Resource Include="Assets\dlc1.jpg" />
+    <Resource Include="Assets\dlc2.jpg" />
     <Resource Include="Assets\dragger.png" />
     <Resource Include="Assets\DroidSans.ttf" />
+    <Resource Include="Assets\github-mark-white.png" />
     <Resource Include="Assets\GRAYSTROKE REGULAR.otf" />
     <Resource Include="Assets\vanilla.jpg" />
     <Resource Include="Assets\launch.png" />
     <Resource Include="Assets\workshop_banner.png" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Update="Settings.Designer.cs">
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-    </Compile>
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="Settings.settings">
-      <Generator>PublicSettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
+    <Resource Include="Assets\workshop_icon.png" />
   </ItemGroup>
 
 </Project>
